<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="action_settings">Settings</string>
    <string name="app_name">Board Game App</string>
    <string name="connect">Connect</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_game">New game</string>
    <string name="nick">Your nickname:</string>
    <string name="remember_me">Remember server and nick</string>
    <string name="server_address">Server address:</string>
    <string name="waiting_for_players">Waiting for players…</string>
    
    <string name="default_server">http://192.168.1.101:8080</string>

</resources>
