<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    
    android:orientation="vertical"
    
    tools:context="hu.level14.boardgameapp.SelectServerFragment" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/server_address" />

    <EditText 
        android:id="@+id/edit_server_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_server"
        android:inputType="textUri"
        />
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/nick" />
        
    <EditText 
        android:id="@+id/edit_nick"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textUri"
        />
    
    <CheckBox 
        android:id="@+id/checkbox_remember_me"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/remember_me"
        />
    
    <Button 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="onConnectButtonClick"
        android:text="@string/connect"/>
</LinearLayout>
